--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
-html, body {
-  margin: 0;
-  padding: 0;
+html,
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Calibri, Arial, sans-serif;
 }
 
 canvas {
-  display: block;
+    display: block;
 }
